--- a/part5/bloglist-frontend/src/App.css
+++ b/part5/bloglist-frontend/src/App.css
@@ -17,3 +17,25 @@
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.singleBlog {
+    margin: 5px;
+    padding: 5px 10px;
+    display: flex;
+    flex-direction: column;
+    background-color: gainsboro;
+}
+.singleBlogItem {
+    margin: 5px 5px;
+    line-height: 22px;
+}
+.singleBlogTogglable {
+    background-color: rgb(189, 189, 189);
+    padding: 5px;
+}
+.singleBlogContent p:first-child {
+    margin-top: 0px !important;
+}
+.likes button {
+    margin-left: 5px;
+}
